--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        Test
+        Main page
     </head>
     <body>
-        This page is a stub for upcoming web page
+        <a href="/hexview>HexView</a>
     </body>
 </html>
