--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         Main page
     </head>
     <body>
-        <a>href="/hexview>"HexView</a>
+        <a href="/hexview">HexView</a>
     </body>
 </html>
